# VEYE_SYSTEM

./: .gitignore  README.md  amplify.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: smoke-edge.yml  telegram-monitor-cron.yml
.playwright-mcp/: page-2026-04-19T00-10-10-709Z.yml
VEYe/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
VEYe/app/: build.gradle.kts  google-services.json  (+1 more)
VEYeApp/: .env.example  .eslintrc.js  .gitignore  .prettierrc.js  AI_INTEGRATION.md  ANDROID_BUILD.md  AndroidKey  App.tsx  Gemfile  MONETIZATION.md  PRODUCTION_CHECKLIST.md  PRODUCT_DESCRIPTION.md  REDESIGN_PLAN.md  SplashScreen.tsx  app.json  babel.config.js  env.d.ts  firebase.json  index.js  package-lock.json  package.json  plan.md  tsconfig.json
VEyeDashBoard/: .env.desktop.example  .env.example  .firebaserc  README.md  index.html  package-lock.json  package.json  vite.config.ts
VEyeDashBoard/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
VEyeDashBoard/src-tauri/capabilities/: default.json
docs/: DATABASE.md  EDGE_FUNCTIONS.md  FIRESTORE_IMPORT.md  MONOREPO.md  SCHEDULE_TELEGRAM.md  SUPABASE_EDGE.md  SUPABASE_MIGRATION_PLAN.md  TAURI_DASHBOARD.md
private_keys/: AuthKey_4LNCKKK5H3.p8  AuthKey_TS27A8DJ4A.p8  ios_distribution.certSigningRequest  ios_distribution.key
scripts/: git-monorepo-commits.sh  smoke-edge.sh
supabase/: README.md  config.toml
veyeFirebaseApi/: AI_PIPELINE.md  TELEGRAM_PLAN.md
veyeLegacyApi/: .firebaserc  TELEGRAM_PLAN.md
veyeWebApp/: .firebaserc  firebase.json  package.json
(+292 files in other folders)
